--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://kit.fontawesome.com/dc5f37a564.js" crossorigin="anonymous"></script>
     <title>Joshua Portfolio</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
         <div class="hero-text">
           <h1>I am Joshua Puente De La Vega</h1>
           <p>And This is my Portfolio</p>
-          <a href="#about"><button>About Me</button></a>
-          <a href="#work"><button>Work</button></a>
-          <a href="#contact"><button>Hire Me</button></a>
+          <a href="#about"><button class="btn1">About Me</button></a>
+          <a href="#work"><button class="btn2">Work</button></a>
+          <a href="#contact"><button class="btn3">Hire Me</button></a>
         </div>
       </div>
 
@@ -34,6 +35,10 @@
 
     <div id="contact" class="contact">
         <h1 class="contact-text">Contact Me:</h1>
+        <i class='fas fa-phone-square'></i>
+        <i class='fas fa-mail-bulk'></i>
+        <i class='fas fa-address-card'></i>
+        <i class='fas fa-dove'></i>
         <a class="link-text" href="tel:860-333-4042"><p>860-333-4042</p></a>
         <a class="link-text" href="mailto:JoshuaPDLV01@gmail.com"><p>Email</p></a>
         <a class="link-text" href="https://github.com/"><p>Github</p></a>
