--- a/index.html
+++ b/index.html
@@ -28,59 +28,31 @@
 
     <div class="my-work">
         <div class="gallery">
-            <a target="_blank" href="/images/me-pic.jpg">
-                <img src="/images/me-pic.jpg" alt="Cinque Terre" width="600" height="400">
+            <a target="_blank" href="./images/me-pic.jpg">
+                <img src="./images/me-pic.jpg" alt="Cinque Terre" width="600" height="400">
             </a>
             <div class="desc">Add a description of the image here</div>
         </div>
 
         <div class="gallery">
-            <a target="_blank" href="/images/me-pic.jpg">
-                <img src="/images/me-pic.jpg" alt="Forest" width="600" height="400">
+            <a target="_blank" href="./images/me-pic.jpg">
+                <img src="./images/me-pic.jpg" alt="Forest" width="600" height="400">
             </a>
             <div class="desc">Add a description of the image here</div>
         </div>
 
         <div class="gallery">
-            <a target="_blank" href="/images/me-pic.jpg">
-                <img src="/images/me-pic.jpg" alt="Northern Lights" width="600" height="400">
+            <a target="_blank" href="./images/me-pic.jpg">
+                <img src="./images/me-pic.jpg" alt="Northern Lights" width="600" height="400">
             </a>
             <div class="desc">Add a description of the image here</div>
         </div>
 
         <div class="gallery">
-            <a target="_blank" href="/images/me-pic.jpg">
-                <img src="/images/me-pic.jpg" alt="Mountains" width="600" height="400">
+            <a target="_blank" href="./images/me-pic.jpg">
+                <img src="./images/me-pic.jpg" alt="Mountains" width="600" height="400">
             </a>
             <div class="desc">Add a description of the image here</div>
-
-            <div class="gallery">
-                <a target="_blank" href="/images/me-pic.jpg">
-                    <img src="/images/me-pic.jpg" alt="" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="/images/me-pic.jpg">
-                    <img src="/images/me-pic.jpg" alt="" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="/images/me-pic.jpg">
-                    <img src="/images/me-pic.jpg" alt="" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="/images/me-pic.jpg">
-                    <img src="/images/me-pic.jpg" alt="" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
         </div>
     </div>
     <div id="contact" class="contact">
