--- a/index.html
+++ b/index.html
@@ -6,61 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <script src="https://kit.fontawesome.com/dc5f37a564.js" crossorigin="anonymous"></script>
     <title>Joshua Portfolio</title>
 </head>
 
 <body>
-    <div class="hero-image">
-        <div class="hero-text">
-            <h1>I am Joshua Puente De La Vega</h1>
-            <p>And This is my Portfolio</p>
-            <a href="#about"><button class="btn1">About Me</button></a>
-            <a href="#work"><button class="btn2">Work</button></a>
-            <a href="#contact"><button class="btn3">Hire Me</button></a>
-        </div>
+
+    <div class="header">
+        <h1>My Portfolio</h1>
+    </div>
+
+    <div class="navigation">
+        <a href="#work">Work</a>
+        <a href="#about">About Me</a>
+        <a href="#contact">Hire Me</a>
     </div>
 
     <div id="about" class="about">
-        <h1 class="about-text">About Me:</h1>
-        <p class="about-text-two">My name is Joshua Puente De La Vega [Fill text here]</p>
+        <div class="table">
+            <h2>About Me</h2>
+            <div style="height:200px;"><img src="/images/me-pic.jpg"></div>
+            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        </div>
+        
     </div>
 
-    <div class="my-work">
-        <div class="gallery">
-            <a target="_blank" href="./images/me-pic.jpg">
-                <img src="./images/me-pic.jpg" alt="Cinque Terre" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
+    <div id="work" class="row">
+        <div class="row">
+            <div class="table">
+                <h2>Title</h2>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
+                <div style="height:200px;"><a href="https://www.youtube.com/"><img src="./images/blank.png"></div></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+
+            </div>
+            <div class="table">
+                <h2>Title</h2>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
+                <div class="img" style="height:200px;"><img src="/images/me-pic.jpg"> </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+
+            <div class="table">
+                <h2>Title</h2>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
+                <div class="img" style="height:200px;"><img src="/images/me-pic.jpg"> </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+
+            <div class="table">
+                <h2>Title</h2>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
+                <div class="img" style="height:200px;"><img src="/images/me-pic.jpg"> </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
         </div>
 
-        <div class="gallery">
-            <a target="_blank" href="./images/me-pic.jpg">
-                <img src="./images/me-pic.jpg" alt="Forest" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="./images/me-pic.jpg">
-                <img src="./images/me-pic.jpg" alt="Northern Lights" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="./images/me-pic.jpg">
-                <img src="./images/me-pic.jpg" alt="Mountains" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-        </div>
     </div>
-    <div id="contact" class="contact">
-        <h1 class="contact-text">Contact Me:</h1>
-        <i class='fas fa-phone-square'></i>
-        <i class='fas fa-mail-bulk'></i>
-        <i class='fas fa-address-card'></i>
-        <i class='fas fa-dove'></i>
+
+    <div id="contact" class="footer">
+        <h2 class="contact">Contact Info:</h2>
         <a class="link-text" href="tel:860-333-4042">
             <p>860-333-4042</p>
         </a>
@@ -74,6 +94,7 @@
             <p>Twitter</p>
         </a>
     </div>
+
 </body>
 
 </html>
