--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         
     </div>
 
-    <div id="work" class="row">
-        <div class="row">
+    <div id="work" class="main">
+        <div class="work">
             <div class="table">
                 <h2>Title</h2>
                 <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
