--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
     <div id="about" class="about">
         <div class="table">
-            <h2>About Me</h2>
-            <div style="height:200px;"><img src="/images/me-pic.jpg"></div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <h2>About Me:</h2>
+            <div style="height:200px;"><img class="brd-abt" src="./images/me-pic.jpg"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
         </div>
-        
+
     </div>
 
     <div id="work" class="main">
         <div class="work">
             <div class="table">
-                <h2>Title</h2>
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
-                <div style="height:200px;"><a href="https://www.youtube.com/"><img src="./images/blank.png"></div></a>
+                <h2>Title:</h2>
+                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -44,9 +44,8 @@
 
             </div>
             <div class="table">
-                <h2>Title</h2>
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
-                <div class="img" style="height:200px;"><img src="/images/me-pic.jpg"> </div>
+                <h2>Title:</h2>
+                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -55,9 +54,8 @@
             </div>
 
             <div class="table">
-                <h2>Title</h2>
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
-                <div class="img" style="height:200px;"><img src="/images/me-pic.jpg"> </div>
+                <h2>Title:</h2>
+                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -66,9 +64,8 @@
             </div>
 
             <div class="table">
-                <h2>Title</h2>
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h5>
-                <div class="img" style="height:200px;"><img src="/images/me-pic.jpg"> </div>
+                <h2>Title:</h2>
+                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
