--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="about" class="about">
         <div class="table">
             <h2>About Me:</h2>
-            <div style="height:200px;"><img class="brd-abt" src="./images/me-pic.jpg"></div>
+            <div style="height: 200px;"><img class="brd-abt" src="./images/"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.</p>
         </div>
