--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <div id="about" class="about">
         <div class="table">
             <h2>About Me:</h2>
-            <div style="height: 200px;"><img class="brd-abt" src="./images/"></div>
+            <div style="height: 200px;" class="abt1"><img class="brd-abt" src="./images/me-pic.jpg"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.</p>
         </div>
-
     </div>
 
     <div id="work" class="main">
