--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="table">
                 <h2>Title:</h2>
-                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
+                <div style="height:225px;"><a href="https://travel-sphere.herokuapp.com/"><img class="shw2" src="./images/TravelSphere.jpg" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -53,7 +53,7 @@
 
             <div class="table">
                 <h2>Title:</h2>
-                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
+                <div style="height:225px;"><a href=""><img class="shw3" src="./images/blank.png" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -63,7 +63,7 @@
 
             <div class="table">
                 <h2>Title:</h2>
-                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
+                <div style="height:225px;"><a href=""><img class="shw4" src="./images/blank.png" alt=""></a></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
