--- a/index.html
+++ b/index.html
@@ -1,95 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Joshua's Portfolio</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="header">
-        <h1>My Portfolio</h1>
+      <h1>My Portfolio</h1>
     </div>
 
     <div class="navigation">
-        <a href="#work">Work</a>
-        <a href="#about">About Me</a>
-        <a href="#contact">Hire Me</a>
+      <a href="#work">Work</a>
+      <a href="#about">About Me</a>
+      <a href="#contact">Hire Me</a>
     </div>
 
     <div id="about" class="about">
-        <div class="table">
-            <h2>About Me:</h2>
-            <div style="height: 200px;" class="abt1"><img class="brd-abt" src="./images/me-pic.jpg"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+      <div class="table">
+        <h2>About Me:</h2>
+        <div style="height: 200px" class="abt1">
+          <img class="brd-abt" src="./images/me-pic.jpg" />
         </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
     </div>
 
     <div id="work" class="main">
-        <div class="work">
-            <div class="table">
-                <h2>Title:</h2>
-                <div style="height:225px;"><a href=""><img class="shw" src="./images/blank.png" alt=""></a></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
-
-            </div>
-            <div class="table">
-                <h2>Title:</h2>
-                <div style="height:225px;"><a href="https://travel-sphere.herokuapp.com/"><img class="shw2" src="./images/TravelSphere.jpg" alt=""></a></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-            <div class="table">
-                <h2>Title:</h2>
-                <div style="height:225px;"><a href=""><img class="shw3" src="./images/blank.png" alt=""></a></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-            <div class="table">
-                <h2>Title:</h2>
-                <div style="height:225px;"><a href=""><img class="shw4" src="./images/blank.png" alt=""></a></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+      <div class="work">
+        <div class="table">
+          <h2>Title:</h2>
+          <div style="height: 225px">
+            <a href="https://samw281.github.io/group-project-1/"
+              ><img class="shw" src="./images/All-Inclusive.jpg" alt=""
+            /></a>
+          </div>
+          <p>
+            All Inclusive was made to help you find concerts near you with ease.
+            Just type in your town and boom. Concerts near you were never as
+            easy to find until now. To top it all off, we even add the weather
+            and hotel system. So you can see what the weather will be like
+            during that time and any hotels within that area if you plan to
+            travel for a concert.
+          </p>
+        </div>
+        <div class="table">
+          <h2>Title:</h2>
+          <div style="height: 225px">
+            <a href="https://travel-sphere.herokuapp.com/"
+              ><img class="shw2" src="./images/TravelSphere.jpg" alt=""
+            /></a>
+          </div>
+          <p>
+            Have you ever tried planning a trip with an entire group of people?
+            Pretty tough to do right? All the ideas getting tossed around,
+            people forgetting what they need to do, groupchats being made, and
+            information being in many different places. Its just a mess. Thats
+            why we created TravelSphere! Make one groupchat that can house
+            ideas, goals, and objectives in one spot! It makes planning trips
+            with friends a whole lot easier!
+          </p>
         </div>
 
+        <div class="table">
+          <h2>Title:</h2>
+          <div style="height: 225px">
+            <a href=""><img class="shw3" src="./images/blank.png" alt="" /></a>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+
+        <div class="table">
+          <h2>Title:</h2>
+          <div style="height: 225px">
+            <a href=""><img class="shw4" src="./images/blank.png" alt="" /></a>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
     </div>
 
     <div id="contact" class="footer">
-        <h2 class="contact">Contact Info:</h2>
-        <a class="link-text" href="tel:860-333-4042">
-            <p>860-333-4042</p>
-        </a>
-        <a class="link-text" href="mailto:JoshuaPDLV01@gmail.com">
-            <p>Email</p>
-        </a>
-        <a class="link-text" href="https://github.com/">
-            <p>Github</p>
-        </a>
-        <a class="link-text" href="https://twitter.com/joshuapdlv01">
-            <p>Twitter</p>
-        </a>
+      <h2 class="contact">Contact Info:</h2>
+      <a class="link-text" href="tel:860-333-4042">
+        <p>860-333-4042</p>
+      </a>
+      <a class="link-text" href="mailto:JoshuaPDLV01@gmail.com">
+        <p>Email</p>
+      </a>
+      <a class="link-text" href="https://github.com/">
+        <p>Github</p>
+      </a>
+      <a class="link-text" href="https://twitter.com/joshuapdlv01">
+        <p>Twitter</p>
+      </a>
     </div>
-
-</body>
-
+  </body>
 </html>
