--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <body>
     <div class="header">
-      <h1>My Portfolio</h1>
+      <h1>Joshua Puente De La Vega</h1>
     </div>
 
     <div class="navigation">
       <a href="#work">Work</a>
       <a href="#about">About Me</a>
-      <a href="#contact">Hire Me</a>
+      <a href="#contact">Contact</a>
     </div>
 
     <div id="about" class="about">
@@ -35,7 +35,7 @@
     <div id="work" class="main">
       <div class="work">
         <div class="table">
-          <h2>Title:</h2>
+          <h2>All Inclusive:</h2>
           <div style="height: 225px">
             <a href="https://samw281.github.io/group-project-1/"
               ><img class="shw" src="./images/All-Inclusive.jpg" alt=""
@@ -51,7 +51,7 @@
           </p>
         </div>
         <div class="table">
-          <h2>Title:</h2>
+          <h2>TravelSphere:</h2>
           <div style="height: 225px">
             <a href="https://travel-sphere.herokuapp.com/"
               ><img class="shw2" src="./images/TravelSphere.jpg" alt=""
